# Anki-Deck-Creator

./: Makefile  README.md  main.py  pyproject.toml  test.apkg
src/: anki_builder.py  extractor.py  llm_generator.py  main.py  models.py
tests/: test_anki_builder.py  test_extractor.py  test_llm_generator.py  test_main.py
