[project]
name = "anki-deck-creator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "genanki>=0.13.1",
    "openai>=2.41.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "tqdm>=4.68.1",
    "typer>=0.26.7",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]
